--- a/DataLoading.ipynb
+++ b/DataLoading.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "#Import all relevant modules\n",
@@ -15,13 +19,18 @@
     "from scipy import interpolate\n",
     "from scipy import ndimage\n",
     "import os\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import argparse"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "#Import the data in os indpendent manner\n",
@@ -31,13 +40,25 @@
     "h5_lf_vis_file_loc = os.path.join(base_dir, 'lfvishead.h5')\n",
     "mri_head_vol_file_loc = os.path.join(base_dir, 'lfvis_mri_head_vol.npy')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Modifiable parameters\n",
+    "parser = argparse.ArgumentParser(description=\"Process modifiable parameters from command line\")\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tf"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -49,7 +70,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
