--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -2,7 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# This is a notebook for notes on jupyter.\n",
     "* There is a good list of extensions at https://github.com/ipython-contrib/jupyter_contrib_nbextensions\n",
@@ -11,6 +14,7 @@
     "* The list of shorcuts can be found by the palette - ctrl + shift + f\n",
     "* The Ipython config file is generally located at .ipython/profile_default/ipython_config.py - can be used to change some notebook properties on start up\n",
     "* Not directly related to the notebooks, but there is a handy package called isort which sorts imports alphabetically which can be added\n",
+    "* Comment with Crtl + /\n",
     "\n",
     "## How to set up a kernel for use, using a virtualenv:\n",
     "1. Create a virtualenv - virtualenv -p PYTHON_PATH ENV_PATH\n",
@@ -23,7 +27,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": []
   }
@@ -44,7 +52,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
