+ Added scripts for running + Added requirements on ilnux + Small epoch printing change

--- a/Notebooks/Pretrained.ipynb
+++ b/Notebooks/Pretrained.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -83,19 +83,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_file():\n",
+    "def load_file(loc):\n",
     "    hdf = h5py.File(loc, mode='r', libver='latest', swmr=True)\n",
     "    return hdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
+   "execution_count": 138,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -108,7 +110,9 @@
       " ...\n",
       " [5.118864  5.118864  5.118864  ... 7.711479  7.711479  7.711479 ]\n",
       " [5.118864  5.118864  5.118864  ... 7.711479  7.711479  7.711479 ]\n",
-      " [5.118864  5.118864  5.118864  ... 7.711479  7.711479  7.711479 ]]\n"
+      " [5.118864  5.118864  5.118864  ... 7.711479  7.711479  7.711479 ]]\n",
+      "[ 10  64 512 512   1]\n",
+      "512\n"
      ]
     },
     {
@@ -126,226 +130,21 @@
     "output_dir = '/users/pgrad/martins7/turing/overflow-storage/lf_volume_sets'\n",
     "hdf5_name = 'lf_set.h5'\n",
     "loc = os.path.join(output_dir, hdf5_name)\n",
-    "hdf = load_file()\n",
+    "hdf = load_file(loc)\n",
     "print(list(hdf.keys()))\n",
     "plt.imshow((hdf['val']['disparity']['images'][2,0,:,:,0]))\n",
     "#plt.imshow((hdf['val']['colour']['images'][2,0,:,:,:]))\n",
     "print(hdf['val']['disparity']['images'][2, 0, :, :, 0])\n",
+    "print(hdf['val']['disparity'].attrs['shape'])\n",
+    "print(hdf['train']['colour'].attrs['shape'][2])\n",
     "hdf.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[  0   0   0]\n",
-      "  [  0   0   0]\n",
-      "  [  0   0   0]\n",
-      "  ...\n",
-      "  [ 41  34  30]\n",
-      "  [ 40  33  28]\n",
-      "  [ 40  33  29]]\n",
-      "\n",
-      " [[  0   0   0]\n",
-      "  [  0   0   0]\n",
-      "  [  0   0   0]\n",
-      "  ...\n",
-      "  [ 41  34  29]\n",
-      "  [ 40  33  28]\n",
-      "  [ 39  32  27]]\n",
-      "\n",
-      " [[  0   0   0]\n",
-      "  [  0   0   0]\n",
-      "  [  0   0   0]\n",
-      "  ...\n",
-      "  [ 41  33  29]\n",
-      "  [ 40  33  29]\n",
-      "  [ 39  32  28]]\n",
-      "\n",
-      " ...\n",
-      "\n",
-      " [[111  79  58]\n",
-      "  [111  79  58]\n",
-      "  [112  80  59]\n",
-      "  ...\n",
-      "  [ 49  49  49]\n",
-      "  [ 49  49  49]\n",
-      "  [ 49  49  49]]\n",
-      "\n",
-      " [[108  77  57]\n",
-      "  [110  78  57]\n",
-      "  [110  79  58]\n",
-      "  ...\n",
-      "  [ 49  49  49]\n",
-      "  [ 49  49  49]\n",
-      "  [ 49  49  49]]\n",
-      "\n",
-      " [[108  78  58]\n",
-      "  [109  78  57]\n",
-      "  [110  79  59]\n",
-      "  ...\n",
-      "  [ 49  49  49]\n",
-      "  [ 49  49  49]\n",
-      "  [ 49  49  49]]]\n",
-      "1\n",
-      "[[[141  92  66]\n",
-      "  [142  92  66]\n",
-      "  [141  89  63]\n",
-      "  ...\n",
-      "  [ 40  34  29]\n",
-      "  [ 39  33  29]\n",
-      "  [ 39  33  29]]\n",
-      "\n",
-      " [[145  96  70]\n",
-      "  [147  96  70]\n",
-      "  [147  95  68]\n",
-      "  ...\n",
-      "  [ 40  34  29]\n",
-      "  [ 39  33  29]\n",
-      "  [ 40  34  30]]\n",
-      "\n",
-      " [[146  98  72]\n",
-      "  [149  98  72]\n",
-      "  [150  98  71]\n",
-      "  ...\n",
-      "  [ 40  33  29]\n",
-      "  [ 39  33  30]\n",
-      "  [ 41  35  31]]\n",
-      "\n",
-      " ...\n",
-      "\n",
-      " [[110  78  57]\n",
-      "  [108  77  57]\n",
-      "  [106  76  57]\n",
-      "  ...\n",
-      "  [ 49  49  49]\n",
-      "  [ 49  49  49]\n",
-      "  [ 49  49  49]]\n",
-      "\n",
-      " [[107  77  58]\n",
-      "  [105  76  56]\n",
-      "  [104  76  57]\n",
-      "  ...\n",
-      "  [ 49  49  49]\n",
-      "  [ 49  49  49]\n",
-      "  [ 49  49  49]]\n",
-      "\n",
-      " [[105  76  57]\n",
-      "  [103  75  56]\n",
-      "  [102  74  56]\n",
-      "  ...\n",
-      "  [ 49  49  49]\n",
-      "  [ 49  49  49]\n",
-      "  [ 49  49  49]]]\n",
-      "2\n",
-      "[[[115 164 190]\n",
-      "  [114 164 190]\n",
-      "  [115 167 193]\n",
-      "  ...\n",
-      "  [  1   0   1]\n",
-      "  [  1   0 255]\n",
-      "  [  1   0   0]]\n",
-      "\n",
-      " [[111 160 186]\n",
-      "  [109 160 186]\n",
-      "  [109 161 188]\n",
-      "  ...\n",
-      "  [  1   0   0]\n",
-      "  [  1   0 255]\n",
-      "  [255 254 253]]\n",
-      "\n",
-      " [[110 158 184]\n",
-      "  [107 158 184]\n",
-      "  [106 158 185]\n",
-      "  ...\n",
-      "  [  1   0   0]\n",
-      "  [  1   0 255]\n",
-      "  [254 253 253]]\n",
-      "\n",
-      " ...\n",
-      "\n",
-      " [[  1   1   1]\n",
-      "  [  3   2   1]\n",
-      "  [  6   4   2]\n",
-      "  ...\n",
-      "  [  0   0   0]\n",
-      "  [  0   0   0]\n",
-      "  [  0   0   0]]\n",
-      "\n",
-      " [[  1   0 255]\n",
-      "  [  5   2   1]\n",
-      "  [  6   3   1]\n",
-      "  ...\n",
-      "  [  0   0   0]\n",
-      "  [  0   0   0]\n",
-      "  [  0   0   0]]\n",
-      "\n",
-      " [[  3   2   1]\n",
-      "  [  6   3   1]\n",
-      "  [  8   5   3]\n",
-      "  ...\n",
-      "  [  0   0   0]\n",
-      "  [  0   0   0]\n",
-      "  [  0   0   0]]]\n",
-      "3\n",
-      "[[[115 164 190]\n",
-      "  [114 164 190]\n",
-      "  [115 167 193]\n",
-      "  ...\n",
-      "  [  1   0   1]\n",
-      "  [  1   0 255]\n",
-      "  [  1   0   0]]\n",
-      "\n",
-      " [[111 160 186]\n",
-      "  [109 160 186]\n",
-      "  [109 161 188]\n",
-      "  ...\n",
-      "  [  1   0   0]\n",
-      "  [  1   0 255]\n",
-      "  [255 254 253]]\n",
-      "\n",
-      " [[110 158 184]\n",
-      "  [107 158 184]\n",
-      "  [106 158 185]\n",
-      "  ...\n",
-      "  [  1   0   0]\n",
-      "  [  1   0 255]\n",
-      "  [254 253 253]]\n",
-      "\n",
-      " ...\n",
-      "\n",
-      " [[  1   1   1]\n",
-      "  [  3   2   1]\n",
-      "  [  6   4   2]\n",
-      "  ...\n",
-      "  [  0   0   0]\n",
-      "  [  0   0   0]\n",
-      "  [  0   0   0]]\n",
-      "\n",
-      " [[  1   0 255]\n",
-      "  [  5   2   1]\n",
-      "  [  6   3   1]\n",
-      "  ...\n",
-      "  [  0   0   0]\n",
-      "  [  0   0   0]\n",
-      "  [  0   0   0]]\n",
-      "\n",
-      " [[  3   2   1]\n",
-      "  [  6   3   1]\n",
-      "  [  8   5   3]\n",
-      "  ...\n",
-      "  [  0   0   0]\n",
-      "  [  0   0   0]\n",
-      "  [  0   0   0]]]\n",
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from PIL import Image\n",
     "dir1 = '/users/pgrad/martins7/turing/overflow-storage/lf_volume_sets/warped'\n",
@@ -353,17 +152,38 @@
     "im1.load()\n",
     "data1 = np.asarray(im1)\n",
     "dir2 = '/users/pgrad/martins7/turing/overflow-storage/lf_volume_sets/val/0003'\n",
-    "im2 = Image.open(os.path.join(dir2, 'Colour40.png'))\n",
-    "im2.load()\n",
-    "data2 = np.asarray(im2)[:, :, :3]\n",
-    "print(data1)\n",
-    "print('1')\n",
-    "print(data2)\n",
-    "print('2')\n",
-    "print(abs(data1 - data2))\n",
-    "print('3')\n",
-    "print(np.subtract(data1, data2))\n",
-    "print('4')"
+    "im2 = Image.open(os.path.join(dir2, 'Colour40.png'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "27\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = np.arange(6).reshape(-1, 2)\n",
+    "for y1, y2 in x:\n",
+    "    print(y1)\n",
+    "    print(y2)\n",
+    "\n",
+    "print((7 * 7)// 2 + 7 //2)\n",
+    "    \n",
+    "print(4 // 4)"
    ]
   }
  ],
