Fixed the PNSR and SSIM in demo
Added difference images to demo

Added ground truth images to the demo

Problem was to do with in place operations

--- a/Notebooks/Warping.ipynb
+++ b/Notebooks/Warping.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -135,13 +135,18 @@
      "output_type": "stream",
      "text": [
       "[[-20  10]]\n",
-      "[2 1]\n"
+      "[2 1]\n",
+      "[1 2 2]\n",
+      "[1 2 3]\n"
      ]
     }
    ],
    "source": [
     "print(np.array([-20, 10])[None])\n",
-    "print(np.flipud(np.array([1, 2]).T))"
+    "print(np.flipud(np.array([1, 2]).T))\n",
+    "x = np.array([1, 2.3, 2.8])\n",
+    "print(x.astype(np.uint8))\n",
+    "print(np.around(x, 0).astype(np.uint8))"
    ]
   },
   {
