Updated stacking code

--- a/Notebooks/Pretrained.ipynb
+++ b/Notebooks/Pretrained.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 83,
    "metadata": {
     "scrolled": true
    },
@@ -275,14 +275,15 @@
       "  [30 15 17]\n",
       "  [29 14 16]]]\n",
       "torch.Size([1, 512, 512, 3])\n",
-      "tensor([[  21,   47,   50,  ...,   15,   20,   23],\n",
-      "        [  21,   45,   48,  ...,   15,   20,   23],\n",
-      "        [  21,   43,   47,  ...,   14,   20,   22],\n",
+      "tensor([[  21,   21,   21,  ...,   58,   59,   59],\n",
+      "        [  21,   21,   21,  ...,   58,   60,   59],\n",
+      "        [  21,   21,   23,  ...,   59,   60,   59],\n",
       "        ...,\n",
-      "        [  58,   47,   40,  ...,   55,   48,   43],\n",
-      "        [  59,   48,   40,  ...,   54,   48,   43],\n",
-      "        [  59,   47,   40,  ...,   55,   48,   43]], dtype=torch.uint8)\n",
-      "torch.Size([512, 512, 192])\n",
+      "        [  39,   40,   40,  ...,   30,   30,   30],\n",
+      "        [  40,   40,   41,  ...,   30,   29,   30],\n",
+      "        [  40,   41,   41,  ...,   29,   30,   29]], dtype=torch.uint8)\n",
+      "torch.Size([192, 512, 512])\n",
+      "torch.Size([64, 3, 512, 512])\n",
       "torch.Size([64, 512, 512, 3])\n",
       "tensor([[[  21,   47,   50],\n",
       "         [  21,   45,   48],\n",
@@ -357,16 +358,19 @@
     "    print(colour_images[0].shape)\n",
     "    print(colour_images[0, 0])\n",
     "    print(test[0].shape)\n",
-    "    out3 = torch.squeeze(torch.cat(torch.chunk(input_t, 64, dim=0), dim=-1))\n",
+    "    out = torch.squeeze(torch.cat(torch.chunk(input_t, 64, dim=0), dim=-1))\n",
+    "    out = out.transpose_(0, 2).transpose_(1, 2)\n",
     "    \n",
     "    # To concatenate into RBG channels use\n",
     "    #out3 = torch.squeeze(torch.cat(torch.chunk(input_t, 3, dim=-1)))\n",
     "    # The problem is I'm not sure how to get the input back quickly...\n",
     "    \n",
-    "    print(out3[0])\n",
-    "    print(out3.shape)\n",
-    "    plt.imshow(out3[:, :, :3].numpy())\n",
-    "    input_back = torch.stack(torch.chunk(out3, 64, dim=-1))\n",
+    "    print(out[0])\n",
+    "    print(out.shape)\n",
+    "    plt.imshow(out[:3, :, :].numpy().transpose(1, 2, 0))\n",
+    "    input_back = torch.stack(torch.chunk(out, 64, dim=0))\n",
+    "    print(input_back.shape)\n",
+    "    input_back = input_back.transpose_(1, 3).transpose_(1, 2)\n",
     "    print(input_back.shape)\n",
     "    print(input_back[0])\n"
    ]
