Added code for running my old 2d cnn
this cnn is based on resnet, but is a bit faster

--- a/Notebooks/Pretrained.ipynb
+++ b/Notebooks/Pretrained.ipynb
@@ -14,14 +14,14 @@
     "import os\n",
     "\n",
     "home = os.path.expanduser('~')\n",
-    "pretrained_loc = os.path.join(home, 'turing', 'overflow-storage', 'EDSR_x2.pt')\n",
+    "pretrained_loc = os.path.join(home, 'turing', 'overflow-storage', 'outputs', 'models', 'EDSR_x2.pt')\n",
     "\n",
     "pretrained_dict = torch.load(pretrained_loc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -35,135 +35,265 @@
       "head.0.weight torch.Size([256, 3, 3, 3])\n",
       "head.0.bias torch.Size([256])\n",
       "body.0.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.0.body.0.weight\n",
       "body.0.body.0.bias torch.Size([256])\n",
+      "body.0.body.0.bias\n",
       "body.0.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.0.body.2.weight\n",
       "body.0.body.2.bias torch.Size([256])\n",
+      "body.0.body.2.bias\n",
       "body.1.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.1.body.0.weight\n",
       "body.1.body.0.bias torch.Size([256])\n",
+      "body.1.body.0.bias\n",
       "body.1.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.1.body.2.weight\n",
       "body.1.body.2.bias torch.Size([256])\n",
+      "body.1.body.2.bias\n",
       "body.2.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.2.body.0.weight\n",
       "body.2.body.0.bias torch.Size([256])\n",
+      "body.2.body.0.bias\n",
       "body.2.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.2.body.2.weight\n",
       "body.2.body.2.bias torch.Size([256])\n",
+      "body.2.body.2.bias\n",
       "body.3.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.3.body.0.weight\n",
       "body.3.body.0.bias torch.Size([256])\n",
+      "body.3.body.0.bias\n",
       "body.3.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.3.body.2.weight\n",
       "body.3.body.2.bias torch.Size([256])\n",
+      "body.3.body.2.bias\n",
       "body.4.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.4.body.0.weight\n",
       "body.4.body.0.bias torch.Size([256])\n",
+      "body.4.body.0.bias\n",
       "body.4.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.4.body.2.weight\n",
       "body.4.body.2.bias torch.Size([256])\n",
+      "body.4.body.2.bias\n",
       "body.5.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.5.body.0.weight\n",
       "body.5.body.0.bias torch.Size([256])\n",
+      "body.5.body.0.bias\n",
       "body.5.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.5.body.2.weight\n",
       "body.5.body.2.bias torch.Size([256])\n",
+      "body.5.body.2.bias\n",
       "body.6.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.6.body.0.weight\n",
       "body.6.body.0.bias torch.Size([256])\n",
+      "body.6.body.0.bias\n",
       "body.6.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.6.body.2.weight\n",
       "body.6.body.2.bias torch.Size([256])\n",
+      "body.6.body.2.bias\n",
       "body.7.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.7.body.0.weight\n",
       "body.7.body.0.bias torch.Size([256])\n",
+      "body.7.body.0.bias\n",
       "body.7.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.7.body.2.weight\n",
       "body.7.body.2.bias torch.Size([256])\n",
+      "body.7.body.2.bias\n",
       "body.8.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.8.body.0.weight\n",
       "body.8.body.0.bias torch.Size([256])\n",
+      "body.8.body.0.bias\n",
       "body.8.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.8.body.2.weight\n",
       "body.8.body.2.bias torch.Size([256])\n",
+      "body.8.body.2.bias\n",
       "body.9.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.9.body.0.weight\n",
       "body.9.body.0.bias torch.Size([256])\n",
+      "body.9.body.0.bias\n",
       "body.9.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.9.body.2.weight\n",
       "body.9.body.2.bias torch.Size([256])\n",
+      "body.9.body.2.bias\n",
       "body.10.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.10.body.0.weight\n",
       "body.10.body.0.bias torch.Size([256])\n",
+      "body.10.body.0.bias\n",
       "body.10.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.10.body.2.weight\n",
       "body.10.body.2.bias torch.Size([256])\n",
+      "body.10.body.2.bias\n",
       "body.11.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.11.body.0.weight\n",
       "body.11.body.0.bias torch.Size([256])\n",
+      "body.11.body.0.bias\n",
       "body.11.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.11.body.2.weight\n",
       "body.11.body.2.bias torch.Size([256])\n",
+      "body.11.body.2.bias\n",
       "body.12.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.12.body.0.weight\n",
       "body.12.body.0.bias torch.Size([256])\n",
+      "body.12.body.0.bias\n",
       "body.12.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.12.body.2.weight\n",
       "body.12.body.2.bias torch.Size([256])\n",
+      "body.12.body.2.bias\n",
       "body.13.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.13.body.0.weight\n",
       "body.13.body.0.bias torch.Size([256])\n",
+      "body.13.body.0.bias\n",
       "body.13.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.13.body.2.weight\n",
       "body.13.body.2.bias torch.Size([256])\n",
+      "body.13.body.2.bias\n",
       "body.14.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.14.body.0.weight\n",
       "body.14.body.0.bias torch.Size([256])\n",
+      "body.14.body.0.bias\n",
       "body.14.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.14.body.2.weight\n",
       "body.14.body.2.bias torch.Size([256])\n",
+      "body.14.body.2.bias\n",
       "body.15.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.15.body.0.weight\n",
       "body.15.body.0.bias torch.Size([256])\n",
+      "body.15.body.0.bias\n",
       "body.15.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.15.body.2.weight\n",
       "body.15.body.2.bias torch.Size([256])\n",
+      "body.15.body.2.bias\n",
       "body.16.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.16.body.0.weight\n",
       "body.16.body.0.bias torch.Size([256])\n",
+      "body.16.body.0.bias\n",
       "body.16.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.16.body.2.weight\n",
       "body.16.body.2.bias torch.Size([256])\n",
+      "body.16.body.2.bias\n",
       "body.17.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.17.body.0.weight\n",
       "body.17.body.0.bias torch.Size([256])\n",
+      "body.17.body.0.bias\n",
       "body.17.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.17.body.2.weight\n",
       "body.17.body.2.bias torch.Size([256])\n",
+      "body.17.body.2.bias\n",
       "body.18.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.18.body.0.weight\n",
       "body.18.body.0.bias torch.Size([256])\n",
+      "body.18.body.0.bias\n",
       "body.18.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.18.body.2.weight\n",
       "body.18.body.2.bias torch.Size([256])\n",
+      "body.18.body.2.bias\n",
       "body.19.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.19.body.0.weight\n",
       "body.19.body.0.bias torch.Size([256])\n",
+      "body.19.body.0.bias\n",
       "body.19.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.19.body.2.weight\n",
       "body.19.body.2.bias torch.Size([256])\n",
+      "body.19.body.2.bias\n",
       "body.20.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.20.body.0.weight\n",
       "body.20.body.0.bias torch.Size([256])\n",
+      "body.20.body.0.bias\n",
       "body.20.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.20.body.2.weight\n",
       "body.20.body.2.bias torch.Size([256])\n",
+      "body.20.body.2.bias\n",
       "body.21.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.21.body.0.weight\n",
       "body.21.body.0.bias torch.Size([256])\n",
+      "body.21.body.0.bias\n",
       "body.21.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.21.body.2.weight\n",
       "body.21.body.2.bias torch.Size([256])\n",
+      "body.21.body.2.bias\n",
       "body.22.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.22.body.0.weight\n",
       "body.22.body.0.bias torch.Size([256])\n",
+      "body.22.body.0.bias\n",
       "body.22.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.22.body.2.weight\n",
       "body.22.body.2.bias torch.Size([256])\n",
+      "body.22.body.2.bias\n",
       "body.23.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.23.body.0.weight\n",
       "body.23.body.0.bias torch.Size([256])\n",
+      "body.23.body.0.bias\n",
       "body.23.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.23.body.2.weight\n",
       "body.23.body.2.bias torch.Size([256])\n",
+      "body.23.body.2.bias\n",
       "body.24.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.24.body.0.weight\n",
       "body.24.body.0.bias torch.Size([256])\n",
+      "body.24.body.0.bias\n",
       "body.24.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.24.body.2.weight\n",
       "body.24.body.2.bias torch.Size([256])\n",
+      "body.24.body.2.bias\n",
       "body.25.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.25.body.0.weight\n",
       "body.25.body.0.bias torch.Size([256])\n",
+      "body.25.body.0.bias\n",
       "body.25.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.25.body.2.weight\n",
       "body.25.body.2.bias torch.Size([256])\n",
+      "body.25.body.2.bias\n",
       "body.26.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.26.body.0.weight\n",
       "body.26.body.0.bias torch.Size([256])\n",
+      "body.26.body.0.bias\n",
       "body.26.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.26.body.2.weight\n",
       "body.26.body.2.bias torch.Size([256])\n",
+      "body.26.body.2.bias\n",
       "body.27.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.27.body.0.weight\n",
       "body.27.body.0.bias torch.Size([256])\n",
+      "body.27.body.0.bias\n",
       "body.27.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.27.body.2.weight\n",
       "body.27.body.2.bias torch.Size([256])\n",
+      "body.27.body.2.bias\n",
       "body.28.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.28.body.0.weight\n",
       "body.28.body.0.bias torch.Size([256])\n",
+      "body.28.body.0.bias\n",
       "body.28.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.28.body.2.weight\n",
       "body.28.body.2.bias torch.Size([256])\n",
+      "body.28.body.2.bias\n",
       "body.29.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.29.body.0.weight\n",
       "body.29.body.0.bias torch.Size([256])\n",
+      "body.29.body.0.bias\n",
       "body.29.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.29.body.2.weight\n",
       "body.29.body.2.bias torch.Size([256])\n",
+      "body.29.body.2.bias\n",
       "body.30.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.30.body.0.weight\n",
       "body.30.body.0.bias torch.Size([256])\n",
+      "body.30.body.0.bias\n",
       "body.30.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.30.body.2.weight\n",
       "body.30.body.2.bias torch.Size([256])\n",
+      "body.30.body.2.bias\n",
       "body.31.body.0.weight torch.Size([256, 256, 3, 3])\n",
+      "body.31.body.0.weight\n",
       "body.31.body.0.bias torch.Size([256])\n",
+      "body.31.body.0.bias\n",
       "body.31.body.2.weight torch.Size([256, 256, 3, 3])\n",
+      "body.31.body.2.weight\n",
       "body.31.body.2.bias torch.Size([256])\n",
+      "body.31.body.2.bias\n",
       "body.32.weight torch.Size([256, 256, 3, 3])\n",
+      "body.32.weight\n",
       "body.32.bias torch.Size([256])\n",
+      "body.32.bias\n",
       "tail.0.0.weight torch.Size([1024, 256, 3, 3])\n",
       "tail.0.0.bias torch.Size([1024])\n",
       "tail.1.weight torch.Size([3, 256, 3, 3])\n",
@@ -174,7 +304,9 @@
    "source": [
     "pretrained_dict.keys()\n",
     "for name, item in pretrained_dict.items():\n",
-    "    print(name, item.size())"
+    "    print(name, item.size())\n",
+    "    if name.find('body') is not -1:\n",
+    "       print(name) "
    ]
   },
   {
