Fixed image warping
Was using the weights incorrectly

--- a/Notebooks/Warping.ipynb
+++ b/Notebooks/Warping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,10 +122,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 629,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def repeat_weights(weights, shape):\n",
+    "    \"\"\"\n",
+    "    Takes in a one dimensional array of weights and repeats them to match shape\n",
+    "    Shape is expected to have the channels as the final dimension.\n",
+    "    \"\"\"\n",
+    "    weights_extra = weights.unsqueeze(-1)\n",
+    "    return weights_extra.expand(\n",
+    "        weights.shape[0], shape[-1]).reshape(shape)\n",
+    "\n",
     "def torch_sample(array, indexes, desired_shape):\n",
     "    \"\"\"\n",
     "    From a numpy array, and a set of indices of shape [2, X]\n",
@@ -135,7 +144,7 @@
     "    \"\"\"\n",
     "    torch_arr = torch.tensor(array, dtype=torch.float64)\n",
     "    indexed = torch_arr[[indexes[0], indexes[1]]]\n",
-    "    return indexed.reshape(desired_shape[0], desired_shape[1], desired_shape[2])\n",
+    "    return indexed.reshape(desired_shape)\n",
     "\n",
     "def torch_warp(\n",
     "        ref_view, disparity_map, ref_pos, novel_pos):\n",
@@ -146,8 +155,12 @@
     "    \n",
     "    distance = ref_pos - novel_pos\n",
     "    \n",
-    "    x_shifted = (x.astype(np.float32) - disparity_map * distance[0]).flatten()\n",
-    "    y_shifted = (y.astype(np.float32) - disparity_map * distance[1]).flatten()\n",
+    "    #print(np.array([x.reshape(ref_view.shape[:-1]), \n",
+    "    #      y.reshape(ref_view.shape[:-1])]))\n",
+    "    x_shifted = (x.astype(np.float64) - disparity_map * distance[0]).flatten()\n",
+    "    y_shifted = (y.astype(np.float64) - disparity_map * distance[1]).flatten()\n",
+    "    #print(np.array([x_shifted.reshape(ref_view.shape[:-1]), \n",
+    "    #      y_shifted.reshape(ref_view.shape[:-1])]))\n",
     "    \n",
     "    #indices for linear interpolation in a square around the central point\n",
     "    x_low = np.floor(x_shifted).astype(int)\n",
@@ -161,12 +174,14 @@
     "    x_high_clip = np.clip(x_high, 0, ref_view.shape[0] - 1)\n",
     "    y_low_clip = np.clip(y_low, 0, ref_view.shape[1] - 1)\n",
     "    y_high_clip = np.clip(y_high, 0, ref_view.shape[1] - 1)\n",
+    "    #print(np.array([x_low_clip.reshape(ref_view.shape[:-1]), \n",
+    "    #      y_low_clip.reshape(ref_view.shape[:-1])]))\n",
     "    \n",
     "    #Gather the interpolation points\n",
-    "    interp_pts_1 = np.stack((x_low_clip, y_low_clip), -1).T\n",
-    "    interp_pts_2 = np.stack((x_low_clip, y_high_clip), -1).T\n",
-    "    interp_pts_3 = np.stack((x_high_clip, y_low_clip), -1).T\n",
-    "    interp_pts_4 = np.stack((x_high_clip, y_high_clip), -1).T\n",
+    "    interp_pts_1 = np.stack((x_low_clip, y_low_clip))\n",
+    "    interp_pts_2 = np.stack((x_low_clip, y_high_clip))\n",
+    "    interp_pts_3 = np.stack((x_high_clip, y_low_clip))\n",
+    "    interp_pts_4 = np.stack((x_high_clip, y_high_clip))\n",
     "    \n",
     "    #Index into the images\n",
     "    desired_shape = ref_view.shape\n",
@@ -188,10 +203,10 @@
     "    w3 = torch.from_numpy(d_x_high * d_y_low)\n",
     "    w4 = torch.from_numpy(d_x_high * d_y_high)\n",
     "    \n",
-    "    weighted_1 = torch.mul(w1.repeat(3).reshape(desired_shape), res_1)\n",
-    "    weighted_2 = torch.mul(w2.repeat(3).reshape(desired_shape), res_2)\n",
-    "    weighted_3 = torch.mul(w3.repeat(3).reshape(desired_shape), res_3)\n",
-    "    weighted_4 = torch.mul(w4.repeat(3).reshape(desired_shape), res_4)\n",
+    "    weighted_1 = torch.mul(repeat_weights(w1, desired_shape), res_1)\n",
+    "    weighted_2 = torch.mul(repeat_weights(w2, desired_shape), res_2)\n",
+    "    weighted_3 = torch.mul(repeat_weights(w3, desired_shape), res_3)\n",
+    "    weighted_4 = torch.mul(repeat_weights(w4, desired_shape), res_4)\n",
     "    \n",
     "    novel_view = torch.add(torch.add(weighted_1, weighted_2), weighted_3)\n",
     "    torch.add(novel_view, weighted_4, out=novel_view)\n",
@@ -200,26 +215,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 476,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def torch_loop(ref_view, disparity_map):\n",
-    "    for i in range(64):\n",
-    "        row, col = i / 8, i // 8"
+    "def torch_loop(ref_view, disparity_map, ref_pos, size):\n",
+    "    one_way = int(math.floor(math.sqrt(size)))\n",
+    "    shape = (size, ) + (ref_view.shape)\n",
+    "    \n",
+    "    res = np.empty(shape, dtype=np.float64)\n",
+    "    for i in range(size):\n",
+    "        row, col = i // one_way, i % one_way\n",
+    "        print(\"\\n\", row, col)\n",
+    "        res[i] = torch_warp(ref_view, disparity_map, ref_pos, np.array([row, col])).numpy()\n",
+    "    return res\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 401,
+   "execution_count": 631,
    "metadata": {},
    "outputs": [],
    "source": [
     "def torch_big_sample(array, indexes, desired_shape):\n",
     "    torch_arr = torch.tensor(array, dtype=torch.float64)\n",
     "    indexed = torch_arr[[indexes[0], indexes[1]]]\n",
-    "    return indexed.reshape(\n",
-    "        desired_shape[0], desired_shape[1], desired_shape[2], desired_shape[3])\n",
+    "    return indexed.reshape(desired_shape)\n",
+    "    #chunked = torch.chunk(indexed, desired_shape[0])\n",
+    "    #chunked = [chunk.reshape(desired_shape[1:]) for chunk in chunked]\n",
+    "    #out = torch.stack(chunked)\n",
     "\n",
     "#Think I have slightly the wrong idea here\n",
     "def depth_rendering(ref_view, disparity_map, lf_size = (64, 512, 512, 3)):\n",
@@ -249,20 +274,17 @@
     "    # Repeat the elements of this to match the size of the disparity map\n",
     "    ref_pos = np.array(\n",
     "        [lf_one_way // 2, lf_one_way // 2]) \n",
-    "    distance = (positions - np.tile(ref_pos, (lf_size[0], 1))).T\n",
-    "    dis_reapeated = np.repeat(distance, lf_size[1] * lf_size[2], axis = 1)\n",
-    "    dis_reapeated = dis_reapeated.reshape(2, lf_size[0], lf_size[1], lf_size[2])\n",
+    "    distance = (np.tile(ref_pos, (lf_size[0], 1)) - positions).T\n",
+    "    dis_repeated = np.repeat(distance, lf_size[1] * lf_size[2], axis = 1)\n",
+    "    dis_repeated = dis_repeated.reshape(2, lf_size[0], lf_size[1], lf_size[2])\n",
     "    \n",
     "    \n",
     "    # Tile the disparity map so that there is one for each lf_position - lf_size[0]\n",
     "    tiled_map = np.tile(disparity_map, (lf_size[0], 1, 1))\n",
     "\n",
     "    # Compute the shifted pixels\n",
-    "    x_shifted = (x.astype(np.float32) - tiled_map * dis_reapeated[0]).flatten()\n",
-    "    print(x_shifted)\n",
-    "    y_shifted = (y.astype(np.float32) - tiled_map * dis_reapeated[1]).flatten()\n",
-    "    print(y_shifted)\n",
-    "    return 0\n",
+    "    x_shifted = (x.astype(np.float64) - tiled_map * dis_repeated[0]).flatten()\n",
+    "    y_shifted = (y.astype(np.float64) - tiled_map * dis_repeated[1]).flatten()\n",
     "    \n",
     "    #indices for linear interpolation in a square around the central point\n",
     "    x_low = np.floor(x_shifted).astype(int)\n",
@@ -278,10 +300,10 @@
     "    y_high_clip = np.clip(y_high, 0, ref_view.shape[1] - 1)\n",
     "    \n",
     "    #Gather the interpolation points\n",
-    "    interp_pts_1 = np.stack((x_low_clip, y_low_clip), -1).T\n",
-    "    interp_pts_2 = np.stack((x_low_clip, y_high_clip), -1).T\n",
-    "    interp_pts_3 = np.stack((x_high_clip, y_low_clip), -1).T\n",
-    "    interp_pts_4 = np.stack((x_high_clip, y_high_clip), -1).T\n",
+    "    interp_pts_1 = np.stack((x_low_clip, y_low_clip))\n",
+    "    interp_pts_2 = np.stack((x_low_clip, y_high_clip))\n",
+    "    interp_pts_3 = np.stack((x_high_clip, y_low_clip))\n",
+    "    interp_pts_4 = np.stack((x_high_clip, y_high_clip))\n",
     "    \n",
     "    #Index into the images\n",
     "    desired_shape = lf_size\n",
@@ -303,14 +325,144 @@
     "    w3 = torch.from_numpy(d_x_high * d_y_low)\n",
     "    w4 = torch.from_numpy(d_x_high * d_y_high)\n",
     "    \n",
-    "    weighted_1 = torch.mul(w1.repeat(3).reshape(desired_shape), res_1)\n",
-    "    weighted_2 = torch.mul(w2.repeat(3).reshape(desired_shape), res_2)\n",
-    "    weighted_3 = torch.mul(w3.repeat(3).reshape(desired_shape), res_3)\n",
-    "    weighted_4 = torch.mul(w4.repeat(3).reshape(desired_shape), res_4)\n",
+    "    #THEY AGREE AT THIS POINT\n",
+    "    weighted_1 = torch.mul(repeat_weights(w1, desired_shape), res_1)\n",
+    "    weighted_2 = torch.mul(repeat_weights(w2, desired_shape), res_2)\n",
+    "    weighted_3 = torch.mul(repeat_weights(w3, desired_shape), res_3)\n",
+    "    weighted_4 = torch.mul(repeat_weights(w4, desired_shape), res_4)\n",
     "    \n",
     "    novel_view = torch.add(torch.add(weighted_1, weighted_2), weighted_3)\n",
     "    torch.add(novel_view, weighted_4, out=novel_view)\n",
     "    return novel_view"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 632,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[2.4  1.48 3.2 ]\n",
+      "   [0.2  1.4  0.8 ]]\n",
+      "\n",
+      "  [[2.   2.   4.  ]\n",
+      "   [0.   1.   0.  ]]]\n",
+      "\n",
+      "\n",
+      " [[[1.6  1.8  3.2 ]\n",
+      "   [1.   3.   4.  ]]\n",
+      "\n",
+      "  [[2.   2.   4.  ]\n",
+      "   [1.   3.   4.  ]]]\n",
+      "\n",
+      "\n",
+      " [[[0.8  2.6  3.2 ]\n",
+      "   [0.2  1.4  0.8 ]]\n",
+      "\n",
+      "  [[2.   2.   4.  ]\n",
+      "   [2.   2.   4.  ]]]\n",
+      "\n",
+      "\n",
+      " [[[0.   1.   0.  ]\n",
+      "   [1.   3.   4.  ]]\n",
+      "\n",
+      "  [[2.   2.   4.  ]\n",
+      "   [3.   1.   3.  ]]]]\n",
+      "\n",
+      " 0 0\n",
+      "\n",
+      " 0 1\n",
+      "\n",
+      " 1 0\n",
+      "\n",
+      " 1 1\n",
+      "\n",
+      "Result was:\n",
+      "\n",
+      "[[[[2.4  1.48 3.2 ]\n",
+      "   [0.2  1.4  0.8 ]]\n",
+      "\n",
+      "  [[2.   2.   4.  ]\n",
+      "   [0.   1.   0.  ]]]\n",
+      "\n",
+      "\n",
+      " [[[1.6  1.8  3.2 ]\n",
+      "   [1.   3.   4.  ]]\n",
+      "\n",
+      "  [[2.   2.   4.  ]\n",
+      "   [1.   3.   4.  ]]]\n",
+      "\n",
+      "\n",
+      " [[[0.8  2.6  3.2 ]\n",
+      "   [0.2  1.4  0.8 ]]\n",
+      "\n",
+      "  [[2.   2.   4.  ]\n",
+      "   [2.   2.   4.  ]]]\n",
+      "\n",
+      "\n",
+      " [[[0.   1.   0.  ]\n",
+      "   [1.   3.   4.  ]]\n",
+      "\n",
+      "  [[2.   2.   4.  ]\n",
+      "   [3.   1.   3.  ]]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "centre_view = np.array(\n",
+    "    [\n",
+    "        [\n",
+    "            [0, 1, 0], [1, 3, 4]\n",
+    "        ], \n",
+    "        [\n",
+    "            [2, 2, 4], [3, 1, 3]\n",
+    "        ]\n",
+    "    ])\n",
+    "\n",
+    "ref_pos = np.array([1, 1]) #Bottom left\n",
+    "lf_size = (4, 2, 2, 3)\n",
+    "\n",
+    "disparity_map = np.array([[-0.8, 0.8], [0, 2]])\n",
+    "\n",
+    "res = depth_rendering(centre_view, disparity_map, lf_size)\n",
+    "\n",
+    "print(res.numpy())\n",
+    "# res_upper_left = torch_warp(centre_view, disparity_map, ref_pos, np.array([0, 0])) \n",
+    "# print(res_upper_left)\n",
+    "\n",
+    "res_gt = torch_loop(centre_view, disparity_map, ref_pos, 4)\n",
+    "\n",
+    "print(\"\\nResult was:\\n\")\n",
+    "print(res_gt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 611,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "torch.Size([4])\n",
+      "tensor([[ 1,  1,  1],\n",
+      "        [ 2,  2,  2],\n",
+      "        [ 3,  3,  3],\n",
+      "        [ 4,  4,  4]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = torch.tensor([1, 2, 3, 4])\n",
+    "print(test.shape[0])\n",
+    "print(test.shape)\n",
+    "size = test.shape[0]\n",
+    "print(test.unsqueeze(-1).expand(4, 3))"
    ]
   },
   {
